# AxoPlotl-WebGPU

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
AxoPlotl/: Application.cpp  Application.h  TriangleRenderer.cpp  TriangleRenderer.h
AxoPlotl/IO/: file_access.cpp  file_access.h
AxoPlotl/rendering/: Buffer.cpp  Buffer.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
AxoPlotl/utils/: web_gpu_utils.cpp  web_gpu_utils.h
assets/shaders/: commons.wgsl  mesh_cell_outline_shader.wgsl  mesh_cell_shader.wgsl  mesh_edge_shader.wgsl  mesh_face_shader.wgsl  mesh_vertex_shader.wgsl  spherical_harmonics_shader.wgsl  vector_shader.wgsl
cmake/: AxoPlotlPlugin.cmake  dependencies.cmake  plugin_helper.cmake
files/: glfw3webgpu.c  imgui_impl_wgpu.cpp
plugins/: Plugins.cmake  README.md  TestPlugin.cpp  TestPlugin.hpp  TestPlugin2.cpp  TestPlugin2.hpp
plugins/DataControl/: CMakeLists.txt  DataControlPlugin.cpp  DataControlPlugin.hpp  ObjectListPlugin.cpp  ObjectListPlugin.hpp
plugins/Debug/: CMakeLists.txt  DebugPlugin.cpp  DebugPlugin.hpp
plugins/Plotting/: CMakeLists.txt  PlottingPlugin.cpp  PlottingPlugin.hpp
shaders/: Shader.wgsl
src/: CMakeLists.txt  main.cpp  main.mm
src/AxoPlotl/: Application.cpp  Application.hpp  AxoPlotl.cpp  AxoPlotl.hpp  AxoPlotl_fwd.hpp  Camera.cpp  Camera.hpp  PluginBase.hpp  PluginRegistry.hpp  Scene.cpp  Scene.hpp  TriangleRenderer.cpp  TriangleRenderer.h  picking.hpp
src/AxoPlotl/IO/: file_access.cpp  file_access.h  happly.hpp  happly_to_ovm.cpp  happly_to_ovm.hpp  om_to_ovm.cpp  om_to_ovm.hpp  rapidobj_to_ovm.cpp  rapidobj_to_ovm.hpp  read_shader.cpp  read_shader.hpp
src/AxoPlotl/debug/: mesh_with_nan_and_inf_props.hpp
src/AxoPlotl/geometry/: BoundingBox.hpp  Vector.hpp  geometry_traits.hpp  mesh_adapter.cpp  mesh_adapter.h  spherical_harmonics.cpp  spherical_harmonics.hpp
src/AxoPlotl/gui/: fonts.cpp  fonts.hpp  themes.cpp  themes.hpp
src/AxoPlotl/input/: Mouse.cpp  Mouse.hpp
src/AxoPlotl/objects/: BaseObject.cpp  BaseObject.hpp  OpenMeshObject.cpp  OpenMeshObject.hpp  OpenVolumeMeshObject.cpp  OpenVolumeMeshObject.hpp  SphericalHarmonicsObject.cpp  SphericalHarmonicsObject.hpp  VolumeMeshObject.cpp  VolumeMeshObject.hpp
src/AxoPlotl/properties/: Histogram.hpp  property_calculations.cpp  property_calculations.hpp  property_data.hpp  property_filters.hpp
src/AxoPlotl/rendering/: Buffer.cpp  Buffer.h  ColorMap.cpp  ColorMap.hpp  MeshCellRenderer.cpp  MeshCellRenderer.hpp  MeshEdgeRenderer.cpp  MeshEdgeRenderer.hpp  MeshFaceRenderer.cpp  MeshFaceRenderer.hpp  MeshVertexRenderer.cpp  MeshVertexRenderer.hpp  OpenVolumeMeshRenderer.cpp  OpenVolumeMeshRenderer.hpp  Renderer.cpp  Renderer.h  RendererBase.hpp  SphericalHarmonicsRenderer.cpp  SphericalHarmonicsRenderer.hpp  TrianglePipeline.cpp  TrianglePipeline.h  VectorRenderer.cpp  VectorRenderer.hpp  VolumeMeshRenderer.cpp  VolumeMeshRenderer.hpp  renderer_types.hpp
src/AxoPlotl/rendering/detail/: WGPUSafeHandle.hpp  create_static_render_data.cpp  create_static_render_data.hpp  depth.hpp  redraw.cpp  redraw.hpp  wgpu_commons.hpp
src/AxoPlotl/rendering/shaders/: Shader.cpp  Shader.hpp  cell_outline_shader_wgsl.hpp  cell_shader_wgsl.hpp  edge_shader_wgsl.hpp  face_shader_wgsl.hpp  vertex_shader_wgsl.hpp
src/AxoPlotl/rendering/shaders/includes/: shader_includes.cpp  shader_includes.hpp
src/AxoPlotl/tools/: DataControlTool.cpp  DataControlTool.hpp  DebugTool.cpp  DebugTool.hpp  PlottingTool.cpp  PlottingTool.hpp
src/AxoPlotl/typedefs/: ToLoG.hpp  glm.hpp  om.hpp  ovm.hpp  wgpu.hpp
src/AxoPlotl/utils/: commons.hpp  fps.cpp  fps.hpp  rapidobj_to_openmesh.cpp  rapidobj_to_openmesh.hpp  web_gpu_utils.cpp
