add_axoplotl_plugin(DataControlPlugin.cpp)

# add_library(DataControlPlugin STATIC
#     DataControlPlugin.cpp
# )

# target_link_libraries(DataControlPlugin
#     PRIVATE AxoPlotlCore
# )

# # find_package(CGAL REQUIRED)
# # target_link_libraries(MyCoolPlugin
# #     PRIVATE
# #         CGAL::CGAL
# # )

# set_target_properties(DataControlPlugin PROPERTIES
#     LIBRARY_OUTPUT_DIRECTORY $<TARGET_FILE_DIR:AxoPlotlApp>/plugins
# )
