add_axoplotl_plugin(DebugPlugin.cpp)

#add_axoplotl_plugin(DataControlPlugin.cpp)

# add_library(DebugPlugin STATIC
#     DebugPlugin.cpp
# )

# target_link_libraries(DebugPlugin
#     PRIVATE AxoPlotlCore
# )

# set_target_properties(DebugPlugin PROPERTIES
#     LIBRARY_OUTPUT_DIRECTORY $<TARGET_FILE_DIR:AxoPlotlApp>/plugins
# )
